Fixed alignment of email, phone

--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -23,6 +23,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    top: 1rem;
+    position: relative
 }
 
 .contact-us-title {
